--- a/ckanext/cdrc/public/less/custom.less
+++ b/ckanext/cdrc/public/less/custom.less
@@ -41,11 +41,12 @@
   }
   .key-section li {
     float: left;
-    margin-right: 10px;
+    margin-right: 22px;
     margin-bottom: 0;
     list-style: disc;
     list-style-position: inside;
     color: #fff;
+    white-space: nowrap;
   }
 
   .key-section li a {
